@@ -7,6 +7,7 @@ WebAOM!
 *Hash and Debug tabs now wrap long lines instead of cutting them off.
 *Window opens at a more comfortable size.
 *Fixed startup issue where the embedded database could fail to open on some systems.
+*Added "Reset to default" in Rules editor right-click menu.
 
 2.4.1 2026.02.14
 *AppImage now supports automatic updates.
