@@ -8,6 +8,7 @@ to time. Do at least check the changelog for relevant info before using it.
 *Hash and Debug tabs now wrap long lines instead of cutting them off.
 *Window opens at a more comfortable size.
 *Fixed startup issue where the embedded database could fail to open on some systems.
+*Added "Reset to default" in Rules editor right-click menu.
 
 2.4.1 14.02.2026:
 *AppImage now supports automatic updates.
